--- a/src/Kanbas/Courses/Modules/index.css
+++ b/src/Kanbas/Courses/Modules/index.css
@@ -74,3 +74,9 @@ li.list-group-item > span:not(.fa) {
 .wd-modules > li {
   margin-bottom: 20px;
 }
+
+.btn {
+  margin: 10px;
+  margin-left: 10px;
+  padding: 5px 10px;
+}
